--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
       padding: 20px;
     }
 
-    textarea {
-      width: 90%;
-      height: 200px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      padding: 10px;
-      font-size: 14px;
-    }
+textarea {
+  width: 90%;
+  height: 80px;   /* plus fin ! */
+  border-radius: 8px;
+  padding: 10px;
+  font-size: 14px;
+}
 
     #table {
       margin-top: 20px;
